# holmes

./: CLAUDE.md  Cargo.toml  LOOP.md  README.md  STATE.md  holmes-denylist-acceptance-criteria.md  holmes-vs-wcjbt-a07-diff.md  osv-scanner.toml
.github/workflows/: acdl-gate.yml  supply-chain.yml
crates/holmes-core/: Cargo.toml
crates/holmes-core/src/: artifacts.rs  lib.rs
crates/holmes-core/src/analysis/: ach.rs  emission.rs  hypothesis.rs  kac.rs  mod.rs  quarantine.rs  state.rs
crates/holmes-core/src/observability/: mod.rs  permission.rs  telemetry.rs
crates/holmes-core/src/safety/: approval.rs  mod.rs  reader.rs  subjects.rs
crates/holmes-core/tests/: analysis_locks.rs  embedding_contract.rs  no_blueprint_exports.rs  observability_locks.rs  safety_locks.rs
crates/holmes-core/tests/fixtures/hostile/: instruction.html  smuggled.txt
crates/holmes-guard/: Cargo.toml
crates/holmes-guard/src/: lib.rs  policy.rs  proxy.rs  resolution.rs  spawn.rs
crates/holmes-guard/src/scan/: exemptions.rs  mod.rs  recipes.rs
crates/holmes-guard/tests/: acdl1_proxy.rs  acdl1_resolution.rs  acdl1_spawn.rs  acdl1_structural.rs  acdl2_scanner.rs  recipe_scanner.rs
crates/holmes-guard/tests/fixtures/: planted_npm.json  planted_python.txt  planted_recipe_smuggled.yaml
crates/holmes-smoke/: Cargo.toml
crates/holmes-smoke/src/: lib.rs  main.rs
crates/holmes-wall/: Cargo.toml
crates/holmes-wall/src/: cypher.rs  graph.rs  ingest.rs  lib.rs  memory.rs  neo4j.rs  provenance.rs  supervise.rs
crates/holmes-wall/tests/: no_delete_audit.rs  wall_locks.rs
docs/: architecture.md  beta-scope-decision-brief.md  build-roadmap.md  constitution.md  epistemic-canon-Holmes.md  holmes-claude-project-instructions.md  holmes-launch-runbook-v1.md  holmes-project-orientation.md  holmes-spec-v2.1-diff.md  holmes-spec-v2.md  holmes-vs-wcjbt.md  security.md  triad-canon.md
docs/acceptance/: holmes-denylist-acceptance-criteria.md
docs/audit/: 00-audit-charter.md  alfred-security-perimeter-overview.md  amendments.md  decisions.md  findings-ledger.md  holmes-master-build-loop-v1-second-pass-audit.md
docs/audit/evidence/: 0c-transcript-2026-07-19-complete.json  0c-transcript-2026-07-19.json  1b-case-transcript-2026-07-19.json  2c-ingest-transcript-2026-07-19.json
docs/case-file/: 00-provenance.md  01-blueprint-kb.md  02-triad-context.md
docs/prompts/: holmes-master-build-loop-v2.md
docs/research/: wisdom-intuition-knowledge-judgment-v2.md  wisdom-intuition-knowledge-judgment-v3.1.docx  wisdom-intuition-knowledge-judgment-v3.1.md
docs/roadmap/: build-phases.md
docs/upstream/: graphiti-optional-extras-pr-draft.md
recipes/: el-diablo.yaml  la-lluvia.yaml
scripts/: build-goose.sh
