[package]
name = "holmes-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Holmes embedding contract: the artifact types Alfred embeds (research_brief in; evidence_pack/case_file out), validation enforcing provenance-bearing findings and invalidation-not-deletion, and a read-only provider-selection seam over holmes-guard."

# Workspace-internal dependency only: the embedding contract carries no
# third-party supply-chain surface beyond the Rust standard library.
[dependencies]
holmes-guard = { path = "../holmes-guard" }
