[package]
name = "holmes-guard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compiled provider-denylist enforcement for Holmes: L1a egress allowlist proxy, L1b provider/model resolution guard, L2 sanitized spawn, and the AC-DL-2 dependency-tree gate."

# Zero third-party dependencies by design: the policy layer carries no
# supply-chain surface beyond the Rust standard library.
[dependencies]

[[bin]]
name = "acdl2-scan"
path = "src/bin/acdl2_scan.rs"
