[package]
name = "holmes-smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 0c headless ACP round-trip harness: spawns goose acp through the holmes-guard L2 seam, streams one prompt, and records a transcript with egress evidence."
publish = false

[dependencies]
holmes-core = { path = "../holmes-core" }
holmes-guard = { path = "../holmes-guard" }
serde_json = "1"

[[bin]]
name = "holmes-case"
path = "src/bin/holmes_case.rs"
